@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2003, 2013, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -187,10 +187,8 @@ ${TESTJAVA}${FS}bin${FS}java ${TESTVMOPTS} \
 	-DTEST=${TEST} \
 	-Dtest.src=${TESTSRC} \
 	-Dtest.classes=${TESTCLASSES} \
-	-Djava.security.manager \
-	-Djava.security.policy=${TESTSRC}${FS}Basic.policy \
 	-Djava.security.debug=${DEBUG} \
-	Basic
+	Basic sm Basic.policy
 
 # save error status
 status=$?
